--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,11 +1,11 @@
-<div class="container right-panel-active">
+<div class="login right-panel-active">
     <!-- SIGN UP -->
     <div class="container_form container--signup">
         <form class="form" id="signUp-form">
             <h2 class="form_title">SIGN UP</h2>
-            <input type="text" placeholder="User" class="input" />
-            <input type="email" placeholder="Email" class="input" />
-            <input type="password" placeholder="Password" class="input" />
+            <input type="text" placeholder="User"/>
+            <input type="email" placeholder="Email"/>
+            <input type="password" placeholder="Password"/>
             <button class="btn">SIGN UP</button>
         </form>
     </div>
@@ -14,8 +14,8 @@
     <div class="container_form container--signin">
         <form class="form" id="signIn-form">
             <h2 class="form_title">SIGN IN</h2>
-            <input type="email" placeholder="Email" class="input" />
-            <input type="password" placeholder="Password" class="input" />
+            <input type="email" placeholder="Email"/>
+            <input type="password" placeholder="Password"/>
             <button class="btn">SIGN IN</button>
         </form>
     </div>
