added signup function and verified user is created

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,9 +3,9 @@
     <div class="container_form container--signup">
         <form class="form" id="signUp-form">
             <h2 class="form_title">SIGN UP</h2>
-            <input type="text" placeholder="User"/>
-            <input type="email" placeholder="Email"/>
-            <input type="password" placeholder="Password"/>
+            <input type="text" placeholder="User" id="user-signup"/>
+            <input type="email" placeholder="Email" id="user-email"/>
+            <input type="password" placeholder="Password" id="user-password"/>
             <button class="btn">SIGN UP</button>
         </form>
     </div>
@@ -14,8 +14,8 @@
     <div class="container_form container--signin">
         <form class="form" id="signIn-form">
             <h2 class="form_title">SIGN IN</h2>
-            <input type="email" placeholder="Email"/>
-            <input type="password" placeholder="Password"/>
+            <input type="email" placeholder="Email" id="email-signin"/>
+            <input type="password" placeholder="Password" id="password-signin"/>
             <button class="btn">SIGN IN</button>
         </form>
     </div>
