added login function, returns messages as expected

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -65,7 +65,7 @@
                 </li>
                 <li>
 
-                    <a href="/databse">
+                    <a href="/database">
 
                         <span class="menu_icon">
 
@@ -90,7 +90,7 @@
                 </li>
                 {{else}}
                 <li>
-                    <a href="/algorithm">LogIn</a>
+                    <a href="/login">LogIn</a>
                 </li>
                 {{/if}}
 
