--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,1 +1,52 @@
-<script src="/javascripts/nav.js"></script>
+<section class="nav-tab">
+    <ul>
+        <li>
+            <a href="/javascript">Javascript</a>
+        </li>
+        <li>
+            <a href="/css3">
+                CSS
+            </a>
+        </li>
+        <li>
+
+            <a href="/html5">HTML5</a>
+        </li>
+        <li>
+            <a href="/github">Github</a>
+        </li>
+        <li>
+
+            <a href="/nodejs">Nodejs</a>
+        </li>
+        <li>
+
+            <a href="/databse">Database</a>
+        </li>
+        <li>
+
+            <a href="/algorithm">Algorithm</a>
+        </li>
+    </ul>
+
+</section>
+<section class="post-list">
+    {{!-- {{>post-list posts}} --}}
+    <div>
+        <h3>Title</h3>
+        <div class="info-row">
+            <span class="category">post.category</span>
+            <span class="creator">post.language</span>
+            <span class="difficulty">post.level</span>
+        </div>
+        <div class="number-row">
+            <span class=""></span>
+            <span class="star">post.count(star)</span>
+            <span class="comments">post.comments</span>
+            <span class="creator">post.creator</span>
+            <span class="postData">post.created_at</sp>
+
+        </div>
+    </div>
+
+</section>
