--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,86 +6,25 @@
 
 body {
   font-family: 'Open Sans';
-  background-color: white;
-  /* display: flex; */
+  background-color: rgb(238, 238, 238);
+  /* display: flex;  */
   /* justify-content: center; */
-  /* width: 80%; */
+
   height: 100vh;
-}
-
-/* nav  */
-nav {
-  height: 100vh;
-  font-size: 16px;
-  transition: 0.4s linear;
-}
-
-nav ul {
-  display: flex;
-  height: 100vh;
-  flex-direction: column;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-  /* background-color: var(--blue); */
-  background-color: white;
-}
-
-nav ul li {
-  padding: 5px 0px;
-  text-align: center;
-  color: var(--blue);
-}
-
-nav ul li a {
-  display: inline-block;
-  color: var(--blue);
-  border-radius: 5px;
-  padding: 5px 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  cursor: pointer;
-}
-
-nav li p {
-  margin-top: 10px;
-}
-
-nav ul li:nth-child(-n + 8):hover {
-  background-color: var(--blue);
-}
-
-nav ul li:nth-child(-n + 8):hover img {
-  transform: translateX(-50px);
-  filter: drop-shadow(rgb(255, 255, 255) 50px 0);
-}
-
-nav ul li:nth-child(-n + 8):hover a {
-  color: white;
-}
-
-.img-collapse {
-  transform: scale(0.7);
-}
-
-.a-collapse {
-  padding: 0;
-}
-
-.left-arr-collapse {
-  transform: rotate(180deg);
-}
-
-.hide {
-  display: none;
-}
-
-.left-arr img {
-  width: 24px;
 }
 
 /* header  */
+header {
+  /* margin: 20px 0; */
+  padding: 20px 30px;
+  width: 100%;
+  /* height: 70px; */
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .logo {
   display: flex;
   justify-content: center;
@@ -98,24 +37,13 @@ nav ul li:nth-child(-n + 8):hover a {
   width: 100%;
 }
 
-img {
+.logo img {
   width: 100%;
-}
-
-header {
-  margin: 20px 0;
-  padding: 0px 30px;
-  width: 100%;
-  height: 70px;
-  /* background-color: pink; */
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 
 .menu {
   position: relative;
-  height: 25px;
+  height: 32px;
 }
 
 /* 2 rotatations of the menu icon  */
@@ -129,10 +57,10 @@ header {
   transform: rotate(0deg);
 }
 
-.menu_icon {
+.menu_small {
   display: block;
-  width: 25px;
-  height: 25px;
+  /* width: 32px;
+  height: 32px; */
   transform: translateX(-12px);
   background: rgb(6, 158, 218) no-repeat center;
 
@@ -166,7 +94,7 @@ header {
 
 .search {
   position: relative;
-  height: 25px;
+  height: 32px;
   width: 220px;
 }
 
@@ -199,7 +127,7 @@ header {
 }
 
 .uploadBtn {
-  height: 25px;
+  height: 32px;
   padding: 0 10px;
   /* appearance: none; */
   border: none;
@@ -207,6 +135,40 @@ header {
   background-color: rgb(6, 158, 218);
   color: white;
   cursor: pointer;
+}
+
+/* nav-tab */
+
+main {
+  padding: 0px 30px;
+  margin: 0 auto;
+}
+
+main > * {
+  margin-top: 25px;
+  background-color: pink;
+  padding: 5px 12px;
+}
+
+.nav-tab ul {
+  display: flex;
+}
+
+.nav-tab a {
+  /* display: inline-block; */
+  margin: 0 10px;
+  padding: 5px 12px;
+  color: black;
+  background-color: rgb(255, 255, 255);
+}
+
+.nav-tab a:first-child {
+  margin-left: 0px;
+}
+/* post list  */
+
+.tabs {
+  border-bottom: 1px solid rgb(231, 231, 231);
 }
 
 @media screen and (min-width: 600px) {
@@ -220,7 +182,7 @@ header {
     margin-left: auto;
   }
 
-  .menu_icon {
+  .menu_small {
     display: none;
   }
 
@@ -258,7 +220,7 @@ header {
 
 @media screen and (min-width: 1000px) {
   body {
-    max-width: 1000px;
+    /* max-width: 1000px; */
   }
 
   .logo {
