--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,22 +1,1 @@
-<section class="post-info">
-    <div class="question-info">
-        question-summary
-    </div>
-    <div class="question-title">
-        question-type
-    </div>
-    <div class="question-answer">
-        question-answer
-    </div>
-    post-info
-</section>
-<section class="comments">
-    <div class="comment-summary">
-        comment summary
-    </div>
-    <div class="comment-list">
-        <div class="single-comment">
-            single comment
-        </div>
-    </div>
-</section>
+{{>single-post}}
