--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Open Sans';
-  background-color: rgb(238, 238, 238);
+  background-color: rgb(240, 242, 245);
   /* display: flex;  */
   /* justify-content: center; */
 
@@ -145,19 +145,28 @@ main {
 }
 
 main > * {
-  margin-top: 25px;
-  background-color: pink;
+  margin-top: 16px;
+  /* background-color: pink; */
   padding: 5px 12px;
+}
+
+.nav-tab {
+  margin-top: 0px;
+  padding-left: 0;
 }
 
 .nav-tab ul {
   display: flex;
+  flex-wrap: wrap;
 }
-
+.nav-tab li {
+  margin-top: 15px;
+}
 .nav-tab a {
   /* display: inline-block; */
   margin: 0 10px;
-  padding: 5px 12px;
+  padding: 5px 8px;
+  font-size: 13px;
   color: black;
   background-color: rgb(255, 255, 255);
 }
@@ -166,9 +175,86 @@ main > * {
   margin-left: 0px;
 }
 /* post list  */
+.post-list {
+  background-color: white;
+  padding: 0 30px 50px;
+}
 
-.tabs {
-  border-bottom: 1px solid rgb(231, 231, 231);
+.post {
+  padding: 20px 0;
+  border-bottom: 1px solid rgb(221, 220, 220);
+}
+
+.post-head h3 {
+  margin-bottom: 20px;
+  font-size: 15px;
+}
+
+.post-body > * {
+  margin-top: 10px;
+  font-size: 12px;
+}
+
+.info-row > * {
+  border: 1px solid grey;
+  border-radius: 3px;
+  padding: 3px 5px;
+}
+
+.info-row .type {
+  border-color: rgb(184, 234, 143);
+  background-color: rgb(246, 255, 236);
+  color: rgb(56, 158, 14);
+}
+
+.info-row .language {
+  border-color: rgb(217, 217, 217);
+  background-color: rgb(250, 250, 250);
+}
+
+.info-row2,
+.data-row {
+  color: rgb(170, 170, 170);
+}
+
+.info-row2 {
+  margin-top: 13px;
+}
+.data-row {
+  display: flex;
+  align-items: center;
+}
+
+.data-row > * {
+  margin-right: 20px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  height: 17px;
+}
+
+.data-row > *:hover {
+  color: rgb(6, 158, 218);
+}
+
+.data-row > *:hover img {
+  transform: translateX(-180px);
+  filter: drop-shadow(rgb(6, 158, 218) 180px 0);
+}
+.data-row > *:hover .data_icon {
+  overflow: hidden;
+}
+
+.data_icon {
+  display: inline-block;
+  height: 100%;
+  margin-right: 5px;
+}
+
+.data_icon img {
+  width: 100%;
+  height: 100%;
+  text-align: center;
 }
 
 @media screen and (min-width: 600px) {
