--- a/views/partials/post-list.handlebars
+++ b/views/partials/post-list.handlebars
@@ -1,1 +1,84 @@
-
+<section class="post-list">
+    <div class="post">
+        <div class="post-head">
+            <h3>Title</h3>
+        </div>
+        <div class="post-body">
+            <div class="info-row">
+                <span class="type">post.type</span>
+                <span class="language">post.language</span>
+            </div>
+            <div class="info-row2">
+                <span class="difficulty">Easy |</span>
+                <span class="postData">2022-05-03</sp>
+            </div>
+            <div class="data-row">
+                <div class="star">
+                    <div class="data_icon">
+                        <img src="assets/post_icons/eye.svg" alt="">
+                    </div>
+                    <span>
+                        3
+                    </span>
+                </div>
+                <div class="comment">
+                    <div class="data_icon">
+                        <img src="assets/post_icons/comment.svg" alt="">
+                    </div>
+                    <span>
+                        4
+                    </span>
+                </div>
+                <div class="star">
+                    <div class="data_icon">
+                        <img src="assets/post_icons/star.svg" alt="">
+                    </div>
+                    <span>
+                        2
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="post">
+        <div class="post-head">
+            <h3>Title</h3>
+        </div>
+        <div class="post-body">
+            <div class="info-row">
+                <span class="type">post.type</span>
+                <span class="language">post.language</span>
+            </div>
+            <div class="info-row2">
+                <span class="difficulty">Easy |</span>
+                <span class="postData">2022-05-03</sp>
+            </div>
+            <div class="data-row">
+                <div class="star">
+                    <div class="data_icon">
+                        <img src="assets/post_icons/eye.svg" alt="">
+                    </div>
+                    <span>
+                        3
+                    </span>
+                </div>
+                <div class="comment">
+                    <div class="data_icon">
+                        <img src="assets/post_icons/comment.svg" alt="">
+                    </div>
+                    <span>
+                        4
+                    </span>
+                </div>
+                <div class="star">
+                    <div class="data_icon">
+                        <img src="assets/post_icons/star.svg" alt="">
+                    </div>
+                    <span>
+                        2
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
