--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 {{>fast-nav}}
 
 
-{{>post-list posts}}
-
-
-
+<section class="post-list">
+    {{>post-list-item}}
+    {{>post-list-item}}
+</section>
