--- a/views/partials/single-post.handlebars
+++ b/views/partials/single-post.handlebars
@@ -1,22 +1,76 @@
 <section class="post-info">
-    <div class="question-info">
-        question-summary
+    <div class="question-summary">
+        <span>Easy</span>
+        <span class="splitter"></span>
+        <span class="post-type">post.type</span>
+        <span class="splitter"></span>
+        <span class="post-language">post.language</span>
     </div>
-    <div class="question-title">
-        question-type
+    <div class="question-head">
+        <h2>question-title</h2>
     </div>
-    <div class="question-answer">
+    <div class="question-body">
         question-answer
     </div>
-    post-info
+    <div class="question-action">
+
+        <div class="star">
+            <div class="data_icon">
+                <img src="../assets/post_icons/eye.svg" alt="">
+            </div>
+            <span>
+                Met
+            </span>
+        </div>
+        <div class="comment">
+            <div class="data_icon">
+                <img src="../assets/post_icons/comment.svg" alt="">
+            </div>
+            <span>
+                Comment
+            </span>
+        </div>
+        <div class="star">
+            <div class="data_icon">
+                <img src="../assets/post_icons/star.svg" alt="">
+            </div>
+            <span>
+                Star
+            </span>
+        </div>
+        <div class="share">
+            <div class="data_icon">
+                <img src="../assets/post_icons/share.svg" alt="">
+            </div>
+            <span>
+                Share
+            </span>
+        </div>
+    </div>
+
+
+
 </section>
-<section class="comments">
-    <div class="comment-summary">
-        comment summary
+<section class="comment-section">
+    <div class="comment-action">
+        <span>5 Answers</span>
+        <button>Comment</button>
     </div>
     <div class="comment-list">
         <div class="single-comment">
-            single comment
+            <div class="comment-head">
+                <div>username</div>
+                <div>created date</div>
+
+
+
+            </div>
+            <div class="comment-body">
+                <p>comment</p>
+            </div>
+            <div class="comment-bottom">
+
+            </div>
         </div>
     </div>
 </section>
