add dashboard route

--- a/views/addQuestion.handlebars
+++ b/views/addQuestion.handlebars
@@ -1,16 +1,22 @@
 <section class="new-question">
     <form id="addQuestion">
-      
-<label for="title">Title</label>
-<textarea name="" id="" cols="30" rows="10"></textarea>
-<label for=""></label>
-<textarea name="" id="" cols="30" rows="10"></textarea>
+        <div class="title-part"></div>
+        <label for="title">Title</label>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <div class="language-part">
+            <label for="">Difficulty</label>
+            <div>
+                <input type="radio" id="easy" name="difficulty" value="easy" checked>
+                <label for="easy">Easy</label>
+                <input type="radio" id="medium" name="difficulty" value="medium">
+                <label for="huey">Medium</label>
+                <input type="radio" id="hard" name="difficulty" value="hard">
+                <label for="hard">Hard</label>
+            </div>
         </div>
-
-
-
-
-
+        <label for="answer">Answer</label>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        </div>
     </form>
 
 
